// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blocks/base matches snapshot when in development 1`] = `
Object {
  "context": "<cwd>/app",
  "devtool": "cheap-module-eval-source-map",
  "entry": Object {
    "main": Array [
      "./main.js",
    ],
  },
  "output": Object {
    "filename": "scripts/[name].js",
    "path": "<cwd>/public",
    "publicPath": "/",
  },
  "resolve": Object {},
}
`;

exports[`blocks/base matches snapshot when in production 1`] = `
Object {
  "context": "<cwd>/app",
  "devtool": false,
  "entry": Object {
    "main": Array [
      "./main.js",
    ],
  },
  "output": Object {
    "filename": "scripts/[name].js",
    "path": "<cwd>/public",
    "publicPath": "/",
  },
  "resolve": Object {},
}
`;
